src/views/components/tags-suggestions/tags-suggestions.scss
@import 'views/styles/shared';


.tags-suggestions {
  margin-top: 14px;
  margin-bottom: 10px;

  button {
    border: none;
    margin-bottom: 0.9em;
    padding: 2px;
  }

  .label-default {
    color: #888;
  }

  li {
    margin: 0;
    font-size: 13px;
    font-weight: 400;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
    border: 1px solid #cde69c;

    &:hover {
      background-color: #cde69c;
      color: #638421;
      border: 1px solid #a5d24a;
    }
  }
}

